New Init Commit; Fixed Project Setup